--- a/src/index.css
+++ b/src/index.css
@@ -48,3 +48,15 @@
 @import url(./blocks/popup/__container_delete-card/popup__container_delete-card.css);
 @import url(./blocks/popup/__title_delete-card/popup__title_delete-card.css);
 @import url(./blocks/popup/__delete-save/popup__delete-save.css);
+@import url(./blocks/login/login.css);
+@import url(./blocks/login/__title/login__title.css);
+@import url(./blocks/login/__form-input/login__form-input.css);
+@import url(./blocks/login/_form-submit-button/login__form-submit-button.css);
+@import url(./blocks/login/__subtitle-link/login__subtitle-link.css);
+@import url(./blocks/header/__logout/header__logout.css);
+@import url(./blocks/login/__subtitle/login__subtitle.css);
+@import url(./blocks/header/__link/header__link.css);
+@import url(./blocks/header/__menu/header__menu.css);
+@import url(./blocks/header/__email/header__email.css);
+@import url(./blocks/popup/__tooltip_image/popup__tooltip_image.css);
+@import url(./blocks/popup/__tooltip_message/popup__tooltip_message.css);
