--- a/src/blocks/header/header.css
+++ b/src/blocks/header/header.css
@@ -2,6 +2,9 @@
     margin: 45px auto 0;
     max-width: 880px;
     border-bottom: 1px solid rgba(84,84,84,.7);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 @media  screen and (max-width: 980px) {
